--- a/webapp/src/locales/de.json
+++ b/webapp/src/locales/de.json
@@ -5,12 +5,19 @@
     "password": "Passwort",
     "forgot-password-question": "Passwort vergessen?",
     "btn-login": "Einloggen",
+    "success-title": "Eingeloggt",
+    "success-desc": "Du wurdest erfolgreich angemeldet!",
     "errors": {
-      "wrong-credentials": "E-Mail und/oder Passwort ist falsch!"
+      "wrong-credentials-title": "Falsche Anmeldedaten",
+      "wrong-credentials-desc": "E-Mail und/oder Passwort ist falsch!"
     }
   },
   "pages": {
     "tasks": "Aufgaben",
     "classes": "Klassen"
+  },
+  "errors": {
+    "429-title": "Zu viele Anfragen",
+    "429-desc": "Du hast zu viele Aktionen ausgeführt. Komm ein wenig herunter und versuche es in einem Moment nochmals!"
   }
 }
