--- a/webapp/src/locales/en.json
+++ b/webapp/src/locales/en.json
@@ -5,12 +5,19 @@
     "password": "Password",
     "forgot-password-question": "Forgot password?",
     "btn-login": "Log in",
+    "success-title": "Logged in",
+    "success-desc": "You've been logged in successfully!",
     "errors": {
-      "wrong-credentials": "Email and/or password is incorrect!"
+      "wrong-credentials-title": "Wrong credentials",
+      "wrong-credentials-desc": "Email and/or password is incorrect! Try again!"
     }
   },
   "pages": {
     "tasks": "Tasks",
     "classes": "Classes"
+  },
+  "errors": {
+    "429-title": "Too Many Requests",
+    "429-desc": "You performed too many actions! Please slow down and try again later!"
   }
 }
