Add user loader to loggedin checker Add description and class to task details

--- a/webapp/src/locales/de.json
+++ b/webapp/src/locales/de.json
@@ -23,6 +23,7 @@
   "tasks": {
     "title": "Aufgaben & Prüfungen",
     "subject": "Fach",
+    "class": "Klasse",
     "date": "Datum",
     "desc": "Beschreibung",
     "showTicked": "Abgehäkelte Aufgaben zeigen",
