Fix tick display not reset when request failed

--- a/webapp/src/locales/de.json
+++ b/webapp/src/locales/de.json
@@ -32,8 +32,8 @@
     "hideTicked": "Abgehäkelte Aufgaben verstecken",
     "allDone": "Super! Alles ist erledigt! Zeit Videospiele zu zocken!",
     "errors": {
-      "tickingFailed-title": "Changing tick status failed",
-      "tickingFailed-desc": "An error occurred while changing the tick status of the task."
+      "tickingFailed-title": "Ändern des Häkchens fehlgeschlagen",
+      "tickingFailed-desc": "Während dem Ändern des Häkchens ist ein Fehler aufgetreten."
     }
   },
   "classes": {
